fix: overflow-x

--- a/src/layout/_layout.scss
+++ b/src/layout/_layout.scss
@@ -54,7 +54,7 @@
   }
 
   @media screen and (max-width: 600px) {
-    --page-w-off: 10px;
+    --page-w-off: 20px;
     --page-w-gap: 20px;
     --page-col: 4;
   }
